--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,27 +8,27 @@
 
 /*=== миксины слой ===*/
 
-@import "_mixins/mixin";
+// @import "_mixins/mixin";
 
 
 
 /*=== базовый слой ===*/
 
-@import "base/__variable";
-@import "base/__normalize";
-@import "base/grid";
-@import "base/typography";
-@import "base/buttons";
-@import "base/forms";
+// @import "base/__variable";
+// @import "base/__normalize";
+// @import "base/grid";
+// @import "base/typography";
+// @import "base/buttons";
+// @import "base/forms";
 
 
 
 /*=== компоненты ===*/
-@import "components/header";
-@import "components/footer";
+// @import "components/header";
+// @import "components/footer";
 
 
 
 /*=== страницы ===*/
 
-@import "pages/layout";
+// @import "pages/layout";
