--- a/src/sass/base/sections.scss
+++ b/src/sass/base/sections.scss
@@ -1,4 +1,13 @@
 .section {
-  padding-top: 115px;
-  padding-bottom: 120px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+
+@media ($desktop-width) {
+
+  .section {
+    padding-top: 115px;
+    padding-bottom: 120px;
+  }
 }
