--- a/src/sass/components/screenshots.scss
+++ b/src/sass/components/screenshots.scss
@@ -1,169 +1,239 @@
-.screenshots {
-  padding-top: 115px;
-  padding-bottom: 120px;
-
-  background-color: #f7fafc;
-}
-
-.screenshots__wrapper {
-  @include fluid-container();
-}
-
-.screenshots__gallery {
-  position: relative;
-
-  height: 500px;
-  margin-top: 80px;
-}
-
-.slider-toggle {
-  position: absolute;
-  top: 230px;
-
-  width: 38px;
-  height: 38px;
-
-  border: 3px solid #d9dcde;
-  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
-}
-
-
-
-.slider-toggle--left {
-  left: -90px;
-}
-
-.slider-toggle--right {
-  right: -90px;
-}
-
-
-.screenshots__slider {
-  position: relative;
-}
-
-.screenshots__item {
-  position: absolute;
-
-  background-image: url('../img/screenshots.jpg');
-  box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.1);
-}
-
-.screenshots__item:hover {
-  box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.2);
-}
-
-
-
-.screenshots__item--1 {
-  top: 110px;
-  left: 0;
-  z-index: 0;
-
-  width: 262px;
-  height: 280px;
-
-  background-position: 0 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    left: -20px;
+@media ($mobile-width) {
+  .screenshots {
+    background-color: #f7fafc;
   }
-}
 
-.screenshots__item--2 {
-  top: 68px;
-  left: 70px;
-  z-index: 1;
-
-  width: 262px;
-  height: 360px;
-
-  background-position: -262px 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    left: 50px;
+  .screenshots__wrapper {
+    @include fluid-container();
   }
-}
 
-.screenshots__item--3 {
-  top: 30px;
-  left: 195px;
-  z-index: 2;
+  .screenshots__gallery {
+    padding-top: 20px;
+    position: relative;
 
-  width: 262px;
-  height: 440px;
-
-  background-position: -524px 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    left: 175px;
+    height: 440px;
   }
-}
 
-.screenshots__item--4 {
-  top: 0;
-  left: 390px;
-  z-index: 3;
+  .slider-toggle {
+    position: absolute;
+    top: 50%;
+    margin-top: -19px;
 
-  width: 360px;
-  height: 500px;
+    width: 38px;
+    height: 38px;
 
-  background-position: -786px 0;
-
-  transition: top $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    top: -10px;
+    border: 3px solid #d9dcde;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
   }
-}
 
-.screenshots__item--5 {
-  top: 30px;
-  left: 683px;
-  z-index: 2;
-
-  width: 262px;
-  height: 440px;
-
-  background-position: -1145px 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    left: 703px;
+  .slider-toggle--left {
+    left: 0;
   }
-}
 
-.screenshots__item--6 {
-  top: 70px;
-  left: 810px;
-  z-index: 1;
-
-  width: 262px;
-  height: 360px;
-
-  background-position: 1406px 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
-
-  &:hover {
-    left: 830px;
+  .slider-toggle--right {
+    right: 0;
   }
-}
 
-.screenshots__item--7 {
-  top: 110px;
-  left: 878px;
-  z-index: 0;
+  .screenshots__slider {
+    //position: relative;
+  }
 
-  width: 262px;
-  height: 280px;
+  .screenshots__item {
+    display: none;
 
-  background-position: 1668px 0;
-  transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+    background-image: url('../img/screenshots.jpg');
+    box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.1);
+  }
 
-  &:hover {
-    left: 898px;
+  .screenshots__item--4 {
+    display: block;
+    position: absolute;
+    left: 50%;
+    margin-left: -131px;
+
+    z-index: 3;
+
+    width: 262px;
+    height: 440px;
+
+    background-position: -524px 0;
+  }
+  }
+
+
+@media ($desktop-width) {
+  .screenshots {
+    padding-top: 115px;
+    padding-bottom: 120px;
+
+    background-color: #f7fafc;
+  }
+
+  .screenshots__wrapper {
+    @include fluid-container();
+  }
+
+  .screenshots__gallery {
+    position: relative;
+
+    height: 500px;
+    margin-top: 80px;
+  }
+
+  .slider-toggle {
+    display: none;
+  }
+
+  .slider-toggle {
+    position: absolute;
+    top: 230px;
+
+    width: 38px;
+    height: 38px;
+
+    border: 3px solid #d9dcde;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  .slider-toggle--left {
+    left: -90px;
+  }
+
+  .slider-toggle--right {
+    right: -90px;
+  }
+
+  .screenshots__slider {
+    position: relative;
+  }
+
+  .screenshots__item {
+    position: absolute;
+
+    background-image: url('../img/screenshots.jpg');
+    box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  .screenshots__item:hover {
+    box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .screenshots__item--1 {
+    top: 110px;
+    left: 0;
+    z-index: 0;
+
+    width: 262px;
+    height: 280px;
+
+    background-position: 0 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: -20px;
+    }
+  }
+
+  .screenshots__item--2 {
+    top: 68px;
+    left: 70px;
+    z-index: 1;
+
+    width: 262px;
+    height: 360px;
+
+    background-position: -262px 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: 50px;
+    }
+  }
+
+  .screenshots__item--3 {
+    top: 30px;
+    left: 195px;
+    z-index: 2;
+
+    width: 262px;
+    height: 440px;
+
+    background-position: -524px 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: 175px;
+    }
+  }
+
+  .screenshots__item--4 {
+    top: 0;
+    left: 390px;
+    z-index: 3;
+
+    width: 360px;
+    height: 500px;
+
+    background-position: -786px 0;
+
+    transition: top $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      top: -10px;
+    }
+  }
+
+  .screenshots__item--5 {
+    top: 30px;
+    left: 683px;
+    z-index: 2;
+
+    width: 262px;
+    height: 440px;
+
+    background-position: -1145px 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: 703px;
+    }
+  }
+
+  .screenshots__item--6 {
+    top: 70px;
+    left: 810px;
+    z-index: 1;
+
+    width: 262px;
+    height: 360px;
+
+    background-position: 1406px 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: 830px;
+    }
+  }
+
+  .screenshots__item--7 {
+    top: 110px;
+    left: 878px;
+    z-index: 0;
+
+    width: 262px;
+    height: 280px;
+
+    background-position: 1668px 0;
+
+    transition: left $transition-time $transition-function, box-shadow $transition-time $transition-function;
+
+    &:hover {
+      left: 898px;
+    }
   }
 }
