--- a/src/sass/_mixins/mixin.scss
+++ b/src/sass/_mixins/mixin.scss
@@ -12,7 +12,18 @@
 
 @mixin fluid-container() {
   width: auto;
-  margin-right: auto;
-  margin-left: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+
+  @media ($tablet-width) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  @media ($desktop-width) {
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
