--- a/src/sass/components/main-nav.scss
+++ b/src/sass/components/main-nav.scss
@@ -1,38 +1,94 @@
-.main-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
+@media ($mobile-width) {
+  .main-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.main-nav__list {
-  margin: 0;
-  margin-bottom: 10px;
-  padding: 0;
-  list-style: none;
+  .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 0;
 
-  display: flex;
-  align-items: baseline;
-}
+    list-style: none;
+  }
 
-.main-nav__item {
-  margin-right: 60px;
+  .main-nav__item {
+    margin-right: 10px;
+    margin-bottom: 20px;
 
-  &:last-child {
-  margin-right: 40px;
-}}
+    &:nth-child(3) {
+      margin-right: 0;
+    }
+  }
 
-.main-nav__item a {
-  padding-top: 10px;
-  padding-bottom: 11px;
+  .main-nav__list li:last-child {
+    width: 50%;
+  }
 
-  font-size: 14px;
-  line-height: 14px;
-  color: $text-white-color;
+  .main-nav__item a {
+    padding-top: 10px;
+    padding-bottom: 11px;
 
-  cursor: pointer;
+    font-size: 18px;
+    line-height: 18px;
+    color: $text-white-color;
+    text-transform: uppercase;
 
-  &:hover {
-    text-decoration: underline;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
+@media ($tablet-width) {
+}
 
+
+
+@media ($desktop-width) {
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .main-nav__list {
+    display: flex;
+    align-items: baseline;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+
+    list-style: none;
+  }
+
+  .main-nav__item {
+    margin-right: 60px;
+
+    &:last-child {
+      margin-right: 40px;
+    }
+  }
+
+  .main-nav__item a {
+    padding-top: 10px;
+    padding-bottom: 11px;
+
+    font-size: 14px;
+    line-height: 14px;
+    color: $text-white-color;
+
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
