--- a/src/sass/components/reviews-item.scss
+++ b/src/sass/components/reviews-item.scss
@@ -73,3 +73,14 @@
 .reviews-item__company {
   display: block;
 }
+
+@media ($mobile-width) {
+
+  .reviews-item {
+    width: calc(100% - 40px);
+    margin: 20px;
+
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.1);
+  }
+
+}
