--- a/src/sass/components/main-nav.scss
+++ b/src/sass/components/main-nav.scss
@@ -47,7 +47,63 @@
     }
   }
 }
+
+
 @media ($tablet-width) {
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-self: flex-end;
+    //align-items: center;
+  }
+
+  .logo {
+    display: flex;
+    align-self: center;
+  }
+
+  .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: baseline;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    padding: 0;
+
+    list-style: none;
+  }
+
+  .main-nav__item {
+    margin-right: 20px;
+    margin-bottom: 10px;
+
+    &:nth-child(3) {
+      margin-right: 0;
+    }
+  }
+
+  .main-nav__list li:last-child {
+    margin-left: 40px;
+  }
+
+  .main-nav__item a {
+    padding-top: 10px;
+    padding-bottom: 11px;
+
+    font-size: 18px;
+    line-height: 18px;
+    color: $text-white-color;
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 
