--- a/src/sass/components/advantage-item.scss
+++ b/src/sass/components/advantage-item.scss
@@ -1,58 +1,12 @@
-
-
-@media ($mobile-width) {
-  .advantage-item {
-    position: relative;
-
-    box-sizing: border-box;
-    width: 360px;
-    //margin-top: 25px;
-    margin-bottom: 30px;
-    padding-left: 98px;
-
-    &:nth-child(n+3) {
-    }
-
-    &:before {
-      content: "";
-      position: absolute;
-      top: 2px;
-      left: 0;
-
-      width: 73px;
-      height: 73px;
-
-      border: 1px solid #eeeeee;
-      border-radius: 50%;
-    }
-
-    .advantage-item__title {
-      margin: 0;
-      margin-bottom: 5px;
-
-      font-weight: $fw-medium;
-      font-size: 24px;
-      line-height: 24px;
-      font-family: $title-font;
-    }
-}
-
-@media ($desktop-width) {
 .advantage-item {
   position: relative;
 
   box-sizing: border-box;
   width: 360px;
-  //margin-top: 25px;
-  margin-bottom: 50px;
   padding-left: 98px;
 
-  &:nth-child(n+3) {
-    margin-bottom: 0;
-  }
-
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 2px;
     left: 0;
@@ -62,15 +16,49 @@
 
     border: 1px solid #eeeeee;
     border-radius: 50%;
-  }}
+  }
+}
+
+.advantage-item__title {
+  margin: 0;
+
+  font-weight: $fw-medium;
+  font-size: 24px;
+  line-height: 24px;
+  font-family: $title-font;
+}
+
+@media ($mobile-width) {
+  .advantage-item {
+    margin-bottom: 30px;
+  }
 
   .advantage-item__title {
-    margin: 0;
-    margin-bottom: 18px;
-
-    font-weight: $fw-medium;
-    font-size: 24px;
-    line-height: 24px;
-    font-family: $title-font;
+    margin-bottom: 5px;
   }
-}}
+}
+
+@media ($tablet-width) {
+  .advantage-item {
+    width: calc(50% - 20px);
+    //min-width: 300px;
+    max-width: 360px;
+    padding-left: 88px;
+    margin-bottom: 20px;
+  }
+
+}
+
+@media ($desktop-width) {
+  .advantage-item {
+    margin-bottom: 50px;
+
+    &:nth-child(n+3) {
+      margin-bottom: 0;
+    }
+  }
+
+  .advantage-item__title {
+    margin-bottom: 18px;
+  }
+}
