--- a/src/sass/components/advantages.scss
+++ b/src/sass/components/advantages.scss
@@ -1,51 +1,50 @@
-@media ($mobile-width) {
-  .advantages__list {
-    position: relative;
+.advantages__list {
+  position: relative;
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    //padding-top: 93px;
-    //padding-bottom: 88px;
+  display: flex;
+  flex-wrap: wrap;
 
-    @include fluid-container();
+  @include fluid-container();
 
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: -20px;
+  &::after {
+    content: '';
+    position: absolute;
 
-      width: 100%;
-      height: 2px;
+    width: 100%;
+    height: 2px;
 
-      background-color: #eeeeee;
-    }
+    background-color: #eeeeee;
   }
 }
 
 
-@media ($desktop-width) {
 
+@media ($mobile-width) {
   .advantages__list {
-    position: relative;
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    //padding-top: 93px;
-    //padding-bottom: 88px;
-
-    @include fluid-container();
+    justify-content: center;
 
     &::after {
-      content: '';
-      position: absolute;
+      bottom: -20px;
+    }
+  }
+}
+
+@media ($tablet-width) {
+  .advantages__list {
+    justify-content: space-between;
+
+    &::after {
+      bottom: -40px;
+    }
+  }
+}
+
+@media ($desktop-width) {
+  .advantages__list {
+    justify-content: space-between;
+
+    &::after {
       bottom: -120px;
-
-      width: 100%;
-      height: 2px;
-
-      background-color: #eeeeee;
     }
   }
 }
